@@ -100,11 +100,27 @@ init|=
 literal|false
 decl_stmt|;
 DECL|field|lastMarkedPosition
-specifier|public
+specifier|private
 name|long
 name|lastMarkedPosition
 init|=
 literal|0
+decl_stmt|;
+DECL|field|lastGlobalPosition
+specifier|private
+name|long
+name|lastGlobalPosition
+init|=
+literal|0
+decl_stmt|;
+DECL|field|BUFFER_SIZE
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|BUFFER_SIZE
+init|=
+literal|8192
 decl_stmt|;
 DECL|method|RecordingJSONParser
 specifier|public
@@ -149,7 +165,7 @@ argument_list|(
 operator|new
 name|char
 index|[
-literal|8192
+name|BUFFER_SIZE
 index|]
 argument_list|)
 expr_stmt|;
@@ -312,6 +328,86 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+elseif|else
+if|if
+condition|(
+name|currPosition
+operator|<
+name|lastMarkedPosition
+condition|)
+block|{
+for|for
+control|(
+name|long
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|currPosition
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|recordChar
+argument_list|(
+name|bufCopy
+index|[
+operator|(
+name|int
+operator|)
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+elseif|else
+if|if
+condition|(
+name|currPosition
+operator|==
+name|BUFFER_SIZE
+operator|&&
+name|lastGlobalPosition
+operator|!=
+name|globalPosition
+condition|)
+block|{
+for|for
+control|(
+name|long
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|currPosition
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|recordChar
+argument_list|(
+name|bufCopy
+index|[
+operator|(
+name|int
+operator|)
+name|i
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|lastGlobalPosition
+operator|=
+name|globalPosition
+expr_stmt|;
 name|lastMarkedPosition
 operator|=
 name|currPosition
